[gd_scene load_steps=3 format=3 uid="uid://cbcox4ccp4yjv"]

[ext_resource type="Script" path="res://Objects/Units/MergeArea.gd" id="1_vvsfg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_20672"]

[node name="MergeArea" type="Area2D"]
script = ExtResource("1_vvsfg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_20672")

[connection signal="area_entered" from="." to="." method="areaEntered"]
